Bug 1542944 - Release nsITouchBarInputCallback earlier so it doesn't leak. r=spohl

Differential Revision: https://phabricator.services.mozilla.com/D26712